# codec2

./: .gitignore  CMakeLists.txt
demo/: freedv_700d_rx.c  freedv_700d_tx.c  freedv_datac0c1_rx.c  freedv_datac0c1_tx.c  freedv_datac1_rx.c  freedv_datac1_tx.c
src/: CMakeLists.txt  HRA_112_112.c  HRA_112_112.h  c2dec.c  c2enc.c  c2sim.c  ch.c  cohpsk_demod.c  cohpsk_get_test_bits.c  cohpsk_mod.c  cohpsk_put_test_bits.c  defines.h  deframer.c  framer.c  freedv_data_raw_rx.c  freedv_data_raw_tx.c  freedv_rx.c  freedv_tx.c  fsk_demod.c  fsk_get_test_bits.c  fsk_mod.c  fsk_put_test_bits.c  ldpc_dec.c  ldpc_enc.c  ldpc_noise.c  modem_probe.c  ofdm_demod.c  ofdm_mod.c  pipe.h
src/win/include/: getopt.h
unittest/: CMakeLists.txt  fading_files.bat  freedv_700d_comprx.c  freedv_700d_comptx.c  tfdmdv.c  vq_mbest.c
